--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "^6.8.0",
     "ethereum-waffle": "^3.4.0",
     "hardhat-abi-exporter": "^2.2.1",
+    "hardhat-gas-reporter": "^1.0.7",
     "mocha": "^8.2.1",
     "node-fetch": "^2.6.1",
     "patch-package": "^6.2.2",
