--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "checks": "yarn lint && yarn typecheck && yarn test && yarn test:integration",
     "docs": "npx solidity-docgen --solc-module solc-0.6 -i contracts -o docs",
     "slither": "./slither.sh",
-    "coverage": "bash ./runCoverage.sh"
+    "coverage": "bash ./runCoverage.sh",
+    "codechecks": "codechecks"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE.md",
