--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "docs": "npx solidity-docgen --solc-module solc-0.6 -i contracts -o docs",
     "slither": "./slither.sh",
     "coverage": "bash ./runCoverage.sh",
-    "codechecks": "codechecks"
+    "codechecks": "codechecks codechecks.yml"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE.md",
   "devDependencies": {
-    "@codechecks/client": "0.1.13-beta",
+    "@codechecks/client": "0.1.13-beta-1",
     "@typechain/ethers-v5": "^6.0.5",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
